--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AnalaizerClass">
+      <HintPath>..\AnalaizerClass\bin\Debug\AnalaizerClass.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
