--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AnalaizerClass">
-      <HintPath>..\AnalaizerClass\bin\Debug\AnalaizerClass.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -81,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AnalaizerClass\AnalaizerClass.csproj">
+      <Project>{6969f134-8547-418d-91d3-55d2c73d7fa6}</Project>
+      <Name>AnalaizerClass</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
